--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-body{
+/* body{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,5 +62,73 @@ body{
     background-color: rgba(233, 90, 233, 0.512);
     border-radius: 0;
     display: none;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+
+body{
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    background-color: #b8c6db;
+    background-image: linear-gradient(315deg, #b8c6db, #f5f7fa 100%);
 }
 
+.quiz-container{
+    background-color: #fff;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 2px rgba(100,100,100,0.1);
+    width: 600px;
+}
+
+.quiz-header{
+    padding: 4rem;
+}
+
+
+h2{
+    padding: 1rem;
+    text-align: center;
+    margin: 0;
+}
+
+ul{
+    list-style: none;
+    padding: 0;
+}
+
+ul li{
+    font-size: 1.2rem;
+    margin: 1rem 0;
+}
+
+ul li label{
+    cursor: pointer;
+}
+
+button{
+    width: 100%;
+    background-color: #8e44ad;
+    border: none;
+    color: white;
+    padding: 1.3rem;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+.btn#reset{
+    background-color: #8d44ad96;
+}
+
+.btn#reset:hover{
+    background-color: #9d4dc0dc;
+}
+
+.btn:hover{
+    background-color: #8f4dad;
+}
